Remove todo priority for now and add date picker to todo item

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,12 @@ aside {
 	position: fixed;
 	margin-left: 300px;
 }
+
+.todo-item {
+	display: flex;
+	justify-content: space-between;
+	padding: 20px;
+	width: 500px;
+
+	border: 1px solid red;
+}
