--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,19 @@
 body {
 	margin: 0;
 	padding: 0;
+	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 header {
 	display: flex;
+	align-items: center;
+	color: white;
+	height: 100px;
+	background-color:cadetblue;
+}
 
-	background-color: aqua;
+header > h1 {
+	margin-left: 100px;
 }
 
 aside {
@@ -16,7 +23,7 @@ aside {
 	position: fixed;
 	height: 100%;
 	width: 300px;
-	background-color: bisque;
+	background-color:cornsilk;
 }
 
 #viewBtns {
