--- a/src/styles.css
+++ b/src/styles.css
@@ -58,8 +58,26 @@ aside {
 	color: white;
 }
 
-#addProjectInputContainer {
-	position: fixed;
+.addProjectContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#addProjectInput {
+	width: 190px;
+	height: 40px;
+	border-radius: 15px;
+	border: none;
+	padding-left: 10px;
+}
+
+#addProjectButtons {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 20px;
+	margin-top: 10px;
 }
 
 .project-card {
