--- a/src/styles.css
+++ b/src/styles.css
@@ -80,6 +80,22 @@ aside {
 	margin-top: 10px;
 }
 
+#submitProjectBtn,
+#cancelAddProjectBtn {
+	border: none;
+	border-radius: 15px;;
+	width: 100px;
+	height: 40px;
+}
+
+#submitProjectBtn:hover,
+#cancelAddProjectBtn:hover {
+	cursor: pointer;
+	background-color: #1F271B;
+	color: white;
+	border: 2px solid white;
+}
+
 .project-card {
 	display: flex;
 	flex-direction: row;
